Xwrits NEWS

Version 2.24   9.Jul.2006

* Support MWM hints on 64-bit platforms.  Bug report and initial patches
  from Jeff Layton.


Version 2.23   21.Jun.2006

* Support '+once[=COUNT]' option.  Patch by Anne Elizabeth Dudfield the
  Rad.


Version 2.22   2.Apr.2005

* Support `+finger=GIFFILE'. Requested by Urko Lusa.  This change was made
  in August 2002, but for some reason never released.


Version 2.21   6.May.2002

* Add support for Xinerama. Requested by Orion Hodson <hodson@icir.org>.


Version 2.20   17.Apr.2002

* Add `title' option. Suggested, and patch provided, by Dale Thatcher
  <xwrits@dalethatcher.com>.

* Finally fix `--multiscreen' option. Thanks to Orion Hodson
  <hodson@icir.org> for lending his multihead machine.


Version 2.19   8.Feb.2002

* The escalation "clock" corresponding to `after=TIME' options proceeds
  even after you cancel a break by deleting all the xwrits windows.
  Therefore, you can no longer prevent escalation by deleting xwrits
  windows with your window manager.

* Locking code works with large `lock-picture's. Reported by Carlos
  O'Donell Jr. <carlos@baldric.uwo.ca>.

* Add `bars-picture' option. If you specify your own `lock-picture', then
  `bars-picture' defaults to a black screen. Say `bars-picture="&bars"' to
  get the old behavior.

* Add `+verbose' option for debugging.

* Xwrits checks whether other clients pay attention to KeyRelease events,
  as well as KeyPress events. This may improve its interaction with certain
  window managers. For example, xwrits seemed to come up less frequently
  than it should when I was using KDE.

* `--multiscreen' still doesn't seem to work, but I don't know why.


Version 2.18   21.Dec.2001

* Fix `--multiscreen' option. Reported by Jamie Zawinski <jwz@jwz.org>.


Version 2.17   18.Dec.2001

* Add `--multiscreen' option. Requested by Jamie Zawinski <jwz@jwz.org>.


Version 2.16   23.Aug.2001

* Choose font more carefully, to avoid null pointer dereferences. Problem